--- a/alumni-mob/src/app/account-activation/account-activation.page.html
+++ b/alumni-mob/src/app/account-activation/account-activation.page.html
@@ -1,18 +1,16 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>Activer mon compte</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">login</ion-title>
+      <ion-title size="large">Activer mon compte</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-signin></app-signin>
+  <app-email-form></app-email-form>
 
-  <ion-button (click)="activationAccount()">Activer mon compte</ion-button>
-  
 </ion-content>
