--- a/alumni-mob/src/app/login/login.page.html
+++ b/alumni-mob/src/app/login/login.page.html
@@ -12,7 +12,7 @@
   </ion-header>
 
   <app-signin></app-signin>
-
-  <ion-button (click)="activationAccount()">Activer mon compte</ion-button>
+  
+  <a [routerLink]="['/','account-activation']">Activer mon compte</a>
   
 </ion-content>
