Create empty component for infinite scroll list of posts

--- a/alumni-mob/src/app/tab1/tab1.page.html
+++ b/alumni-mob/src/app/tab1/tab1.page.html
@@ -18,6 +18,7 @@
 
  <!--  <app-explore-container name="Tab 1 page"></app-explore-container> -->
 
+  <app-post-list></app-post-list>
 
   <app-intern></app-intern>
   <app-post></app-post>
