--- a/alumni-mob/src/app/tab1/components/post-list/post-list.component.html
+++ b/alumni-mob/src/app/tab1/components/post-list/post-list.component.html
@@ -1,3 +1,16 @@
-<p>
-  post-list works!
-</p>
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let post of posts; let index">
+      <!-- <ion-avatar slot="start">
+        <img [src]="'https://picsum.photos/80/80?random=' + index" alt="avatar" />
+      </ion-avatar>
+      <ion-label>{{ item }}</ion-label> -->
+      <app-intern-header [intern]="post.author"></app-intern-header>
+      <app-post-content [post]="post"></app-post-content>
+      <app-interaction-bar></app-interaction-bar>
+    </ion-item>
+  </ion-list>
+  <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+</ion-content>
