--- a/alumni-mob/src/app/tab1/components/post-content/post-content.component.html
+++ b/alumni-mob/src/app/tab1/components/post-content/post-content.component.html
@@ -1,15 +1,15 @@
 
   <ion-card-content>
     <ion-item>
-      {{ post.title}} 
+      {{ postContent.title}} 
     </ion-item>
     <ion-item>
-      {{ post.media}}
+      {{ postContent.media}}
     </ion-item>
     <ion-item>
-      {{ post.content}}
+      {{ postContent.content}}
     </ion-item>
     <ion-item>
-      <ion-note>Publié le {{ post.postedAt }}</ion-note>
+      <ion-note>Publié le {{ postContent.postedAt }}</ion-note>
     </ion-item> 
   </ion-card-content>
