--- a/alumni-mob/src/app/tab1/tab1.page.html
+++ b/alumni-mob/src/app/tab1/tab1.page.html
@@ -20,8 +20,8 @@
 
   <app-post-list></app-post-list>
 
-  <app-intern></app-intern>
+  <!-- <app-intern></app-intern> -->
   <app-post></app-post>
-  <app-interaction-bar></app-interaction-bar>
+ 
 
 </ion-content>
