--- a/alumni-mob/src/app/tab1/components/post/post.component.html
+++ b/alumni-mob/src/app/tab1/components/post/post.component.html
@@ -1,7 +1,5 @@
-<ng-container *ngFor="let post of posts">
-  <ion-card>
-    <app-intern-header></app-intern-header>
-    <app-post-content [postContent]="post"></app-post-content>
-    <app-interaction-bar></app-interaction-bar>
-  </ion-card>
-</ng-container>
+<ion-card>
+  <app-intern-header [intern]="post.author"></app-intern-header>
+  <app-post-content [postContent]="post"></app-post-content>
+  <app-interaction-bar></app-interaction-bar>
+</ion-card>
