add a img to postContent template

--- a/alumni-mob/src/app/tab1/components/post-content/post-content.component.html
+++ b/alumni-mob/src/app/tab1/components/post-content/post-content.component.html
@@ -3,9 +3,9 @@
     <ion-item>
       {{ postContent.title}} 
     </ion-item>
-    <ion-item>
-      {{ postContent.media}}
-    </ion-item>
+    <ion-img src="{{ postContent.media}}">
+      
+    </ion-img>
     <ion-item>
       {{ postContent.content}}
     </ion-item>
