--- a/alumni-mob/src/app/tab1/components/intern/intern.component.html
+++ b/alumni-mob/src/app/tab1/components/intern/intern.component.html
@@ -8,8 +8,8 @@
         </ion-avatar>
         <ion-list>
           <ion-label>{{ intern.firstname }} {{ intern.lastname }} </ion-label>
-          <ion-label>{{ intern.occupation }} chez {{ intern.company?.name }}</ion-label>
-          <ion-note>{{ intern.poe?.name }} ({{ intern.poe?.beginAt | date: 'dd/MM/yyy'}} - {{ intern.poe?.endAt | date: 'dd/MM/yyy' }})</ion-note>
+          <ion-label>{{ intern.occupation }} chez {{ intern.company.name }}</ion-label>
+          <ion-note>{{ intern.poe.name }} ({{ intern.poe.beginAt | date: 'dd/MM/yyy'}} - {{ intern.poe.endAt | date: 'dd/MM/yyy' }})</ion-note>
         </ion-list>
         <ion-icon name="person-outline"></ion-icon>
       </ion-item>
