changing directory for icon_img and updates paths on template

--- a/alumni-mob/src/app/tab1/components/interactionBar/interaction-bar.component.html
+++ b/alumni-mob/src/app/tab1/components/interactionBar/interaction-bar.component.html
@@ -1,7 +1,7 @@
 <div class="divContainer border">
   <div class="divContainerChild ">
-    <img src="/assets/like_icon.png" alt="" />
-    <img src="/assets/com_icon.png" alt="" />
+    <img src="/assets/icon/like_icon.png" alt="" />
+    <img src="/assets/icon/com_icon.png" alt="" />
   </div>
 </div>
 
