--- a/alumni-mob/src/app/tab1/components/post-content/post-content.component.html
+++ b/alumni-mob/src/app/tab1/components/post-content/post-content.component.html
@@ -3,7 +3,10 @@
     <ion-item>
       {{ postContent.title}} 
     </ion-item>
-    <ion-img src="{{ postContent.media}}">
+    <ion-item>
+      {{ postContent.category}} 
+    </ion-item>
+    <ion-img class="postImg" src="{{ postContent.media}}">
       
     </ion-img>
     <ion-item>
