--- a/alumni-mob/src/app/tab1/tab1.page.html
+++ b/alumni-mob/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar class="toolbarLayOut">
     <div class="toolBarChild">
-      <img class="logoSize" src="/assets/aelion_logo.png">
+      <img class="logoSize" src="/assets/icon/aelion_logo.png">
       <h1> Alumni </h1>
     </div>
   </ion-toolbar>
