--- a/alumni-mob/src/app/tab1/components/interactionBar/interaction-bar.component.scss
+++ b/alumni-mob/src/app/tab1/components/interactionBar/interaction-bar.component.scss
@@ -1,6 +1,5 @@
 .divContainer {
   width: 100%;
-  
   display: flex;
   justify-content: center;
 }
@@ -12,7 +11,7 @@
   }
 .border {
   border-radius: 10px;
-  border: 1px solid black;
+  // border: 1px solid black;
 }
 img {
   width: 8%;
