--- a/alumni-mob/src/app/tab1/tab1.page.scss
+++ b/alumni-mob/src/app/tab1/tab1.page.scss
@@ -5,7 +5,7 @@
 .toolbarLayOut{
     display:flex;
     
-    border:1px solid black;
+    //border:1px solid black;
 }
 .toolBarChild{
     width: 100%;
@@ -15,6 +15,6 @@
    
 }
 .border{
-    border:1px solid black;
+    //border:1px solid black;
     justify-content: flex-end;
 }
