--- a/alumni-mob/src/app/tab3/tab3.page.html
+++ b/alumni-mob/src/app/tab3/tab3.page.html
@@ -1,8 +1,9 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+  <ion-toolbar class="toolbarLayOut">
+    <div class="toolBarChild">
+      <img class="logoSize" src="/assets/icon/aelion_logo.png">
+      <h1> Alumni messagerie </h1>
+    </div>
   </ion-toolbar>
 </ion-header>
 
