fixing popover menu issues in tab1

--- a/alumni-mob/src/app/tab1/components/post/post.component.html
+++ b/alumni-mob/src/app/tab1/components/post/post.component.html
@@ -1,5 +1,5 @@
 <ion-card>
-  <app-intern-header [intern]="post.author"></app-intern-header>
+  <app-intern-header [intern]="post.author" [index]="index"></app-intern-header>
   <app-post-content [postContent]="post"></app-post-content>
   <app-interaction-bar></app-interaction-bar>
 </ion-card>
