--- a/alumni-mob/src/app/tab1/components/post-list/post-list.component.html
+++ b/alumni-mob/src/app/tab1/components/post-list/post-list.component.html
@@ -1,7 +1,7 @@
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let post of posts; let index">
-      <app-post [post]="post"></app-post>
+    <ion-item *ngFor="let post of posts; let i = index">
+      <app-post [post]="post" [index]="i"></app-post>
       <!-- <app-intern-header [intern]="post.author"></app-intern-header>
       <app-post-content [postContent]="post"></app-post-content>
       <app-interaction-bar></app-interaction-bar> -->
