--- a/alumni-mob/src/app/tab1/components/interactionBar/interaction-bar.component.html
+++ b/alumni-mob/src/app/tab1/components/interactionBar/interaction-bar.component.html
@@ -8,9 +8,24 @@
     />
   </div>
 </div>
-<div *ngIf="showCommentForm" class="comment-form">
-  <form>
-    <textarea placeholder="Write a comment..."></textarea>
-    <button type="submit">Submit</button>
+<div *ngIf="showCommentForm" class="blackBorder formContainer">
+  <form class="comment-form">
+    <textarea class="textarealayOut" placeholder="écrivez un commentaire..."></textarea>
+    <ion-button type="submit">Submit</ion-button>
   </form>
 </div>
+
+
+<!-- <form [formGroup]="form" (ngSubmit)="onSubmit()">
+  <ion-list>
+    <ion-item>
+      <ion-input formControlName="login" placeholder="Votre login..."></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input formControlName="password" type="password" placeholder="Votre mot de passe">
+        <ion-input-password-toggle slot="end"></ion-input-password-toggle>
+      </ion-input>
+    </ion-item>
+      <ion-button type="submit" [disabled]="form.invalid" shape="round">GO !</ion-button>
+  </ion-list>
+</form> -->
