--- a/alumni-mob/src/app/tab1/components/post-content/post-content.component.scss
+++ b/alumni-mob/src/app/tab1/components/post-content/post-content.component.scss
@@ -1,4 +1,26 @@
 .postImg{
-    width:60%;
+    width:20%;
     height:50%;
+}
+.divContainerChild ion-img {
+    width:20%;
+    height:50%;
+    object-fit: cover; 
+}
+.marginTop{
+    margin-top:1%;
+}
+.blackColor{
+    color:black;
+}
+#postContent{
+    width:80%;
+    //border:black 1px solid;
+}
+
+/* Styles pour les écrans mobiles (max-width: 600px) */
+@media (min-width: 925px) and (max-width: 2000px) {
+    .postContainer{
+        width:600px;
+    }
 }
