fixing img on postContent template

--- a/alumni-mob/src/app/tab1/components/post-content/post-content.component.scss
+++ b/alumni-mob/src/app/tab1/components/post-content/post-content.component.scss
@@ -1,12 +1,12 @@
-.postImg{
-    width:20%;
-    height:50%;
-}
-.divContainerChild ion-img {
-    width:20%;
-    height:50%;
-    object-fit: cover; 
-}
+// .postImg{
+//     width:50%;
+//     height:50%;
+// }
+// .divContainerChild ion-img {
+//     width:20%;
+//     height:50%;
+//     object-fit: cover; 
+// }
 .marginTop{
     margin-top:1%;
 }
