--- a/alumni-mob/src/app/tab1/tab1.page.html
+++ b/alumni-mob/src/app/tab1/tab1.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar class="toolbarLayOut">
     <div class="toolBarChild">
       <img class="logoSize" src="/assets/icon/aelion_logo.png">
-      <h1> Alumni Posts </h1>
+      <h1> Fil d'actualité </h1>
     </div>
   </ion-toolbar>
 </ion-header>
