--- a/alumni-mob/src/app/tab2/tab2.page.html
+++ b/alumni-mob/src/app/tab2/tab2.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar class="toolbarLayOut">
     <div class="toolBarChild">
       <img class="logoSize" src="/assets/icon/aelion_logo.png">
-      <h1> Alumni stagiaires </h1>
+      <h1> Membres </h1>
     </div>
   </ion-toolbar>
 </ion-header>
