--- a/alumni-mob/src/app/intern/components/intern-info.component.html
+++ b/alumni-mob/src/app/intern/components/intern-info.component.html
@@ -11,7 +11,7 @@
         <ion-label>téléphone : {{ intern.phone }} </ion-label>
       </ion-row>
       <ion-row>
-        <ion-label>Emails : {{ intern.mails?.join(', ') }}</ion-label>
+        <ion-label>Emails : {{ intern.emails?.join(', ') }}</ion-label>
       </ion-row>
     </ion-col>
     <ion-col size="1"></ion-col>
