--- a/alumni-mob/src/app/tab2/components/interns/interns.component.html
+++ b/alumni-mob/src/app/tab2/components/interns/interns.component.html
@@ -1,4 +1,3 @@
-<ng-container *ngFor="let intern of interns, let index=index">
-  <app-intern-header [intern]="intern" [index]="index"></app-intern-header>
-  
+<ng-container *ngFor="let intern of interns, let i = index">
+  <app-intern-header [intern]="intern" [index]="i"></app-intern-header>
 </ng-container>
