--- a/alumni-mob/src/app/shared/components/intern-header/intern-header.component.html
+++ b/alumni-mob/src/app/shared/components/intern-header/intern-header.component.html
@@ -5,9 +5,7 @@
     <ion-grid>
       <ion-row>
         <ion-col size="3">
-          <ion-avatar>
-            <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-          </ion-avatar>
+          <app-avatar-with-status></app-avatar-with-status>
       </ion-col>
       <ion-col>
         <ion-row>
