Add an online status bullet to avatar

--- a/alumni-mob/src/app/shared/components/avatar-with-status/avatar-with-status.component.html
+++ b/alumni-mob/src/app/shared/components/avatar-with-status/avatar-with-status.component.html
@@ -1,6 +1,10 @@
+<div class="online-status" [ngClass]="{'connected': isOnline}"></div>
+
 <ion-avatar>
+  <!-- TODO : change displayed avatar depending on the avatar stored in the InternType object-->
   <img
     alt="Silhouette of a person's head"
     src="https://ionicframework.com/docs/img/demos/avatar.svg"
   />
 </ion-avatar>
+
