--- a/alumni-mob/src/app/shared/components/intern-header/intern-header.component.html
+++ b/alumni-mob/src/app/shared/components/intern-header/intern-header.component.html
@@ -5,7 +5,7 @@
     <ion-grid>
       <ion-row>
         <ion-col size="3">
-          <app-avatar-with-status></app-avatar-with-status>
+          <app-avatar-with-status [intern]="intern"></app-avatar-with-status>
       </ion-col>
       <ion-col>
         <ion-row>
