--- a/alumni-mob/src/app/shared/components/chat/chat.component.html
+++ b/alumni-mob/src/app/shared/components/chat/chat.component.html
@@ -3,18 +3,24 @@
     <ion-buttons slot="start">
       <ion-button (click)="onCancel()">Retour</ion-button>
     </ion-buttons>
-    <ion-title>Echanges avec {{ intern.firstname }} {{ intern.lastname }}</ion-title>
+    <ion-title
+      >Echanges avec {{ intern.firstname }} {{ intern.lastname }}</ion-title
+    >
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
   <div class="chat-container">
-      <div 
-        [ngClass]="{'chat-message': true, 'received': message.direction === 'in', 'sent': message.direction === 'out'}"
-        *ngFor="let message of messages"
-      >
-        <p>{{ message.content }}</p>
-        <p class="datetime">{{ message.datetime | date: 'dd-MM hh:mm'}}</p>
-  </div>
+    <div
+      [ngClass]="{
+        'chat-message': true,
+        received: message.direction === 'in',
+        sent: message.direction === 'out'
+      }"
+      *ngFor="let message of messages"
+    >
+      <p>{{ message.content }}</p>
+      <p class="datetime">{{ message.datetime | date : "dd-MM hh:mm" }}</p>
+    </div>
     <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
       <ion-infinite-scroll-content
         loadingSpinner="bubbles"
@@ -25,10 +31,10 @@
 
   <div class="chat-message">
     <ion-row>
-      <ion-col>
-        <ion-input class="border" [value]="message"></ion-input>
+      <ion-col size-sm="11">
+        <ion-input [(ngModel)]="this.message"></ion-input>
       </ion-col>
-      <ion-col>
+      <ion-col size-sm="1">
         <ion-icon name="send-outline" (click)="onSend()"></ion-icon>
       </ion-col>
     </ion-row>
