--- a/alumni-mob/src/app/shared/components/chat/chat.component.scss
+++ b/alumni-mob/src/app/shared/components/chat/chat.component.scss
@@ -66,7 +66,7 @@
       }
   }
 
-  .border {
-    border: blue solid 1px;
-    border-radius: 20px;
+  ion-row {
+    border: solid 1px black;
   }
+
