--- a/alumni-mob/src/app/shared/components/intern-header/intern-header.component.html
+++ b/alumni-mob/src/app/shared/components/intern-header/intern-header.component.html
@@ -27,7 +27,7 @@
               <ion-content>
                 <ion-list>
                   <ion-item (click)="showDetail(intern._id)" [button]="true" [detail]="false">Détail</ion-item>
-                  <ion-item (click)="onChatClick()" [button]="true" [detail]="false">Chat</ion-item>
+                  <ion-item *ngIf="intern._id !== undefined"(click)="onChatClick(intern._id)" [button]="true" [detail]="false">Chat</ion-item>
                 </ion-list>
               </ion-content>
             </ng-template>
