--- a/alumni-mob/src/app/tabs/tabs.page.html
+++ b/alumni-mob/src/app/tabs/tabs.page.html
@@ -14,6 +14,10 @@
       <ion-icon aria-hidden="true" name="square"></ion-icon>
       <ion-label>Messagerie</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="tab4" href="/tabs/tab4">
+      <ion-icon aria-hidden="true" name="star"></ion-icon>
+      <ion-label>Expériences Pro</ion-label>
+    </ion-tab-button>
     <app-logout></app-logout>
   </ion-tab-bar>
 </ion-tabs>
