some change on the front posts

--- a/alumni-mob/src/app/tab1/components/interactionBar/interaction-bar.component.html
+++ b/alumni-mob/src/app/tab1/components/interactionBar/interaction-bar.component.html
@@ -1,8 +1,8 @@
 <div class="divContainer border">
   <div class="divContainerChild">
-    <img src="/assets/icon/like_icon.png" alt="" />
+    <img src="/assets/icon/like.png" alt="" />
     <img
-      src="/assets/icon/com_icon.png"
+      src="/assets/icon/comment-28.png"
       alt="comments"
       (click)="toggleCommentForm()"
     />
