--- a/alumni-mob/src/app/tab4/components/company/company.component.html
+++ b/alumni-mob/src/app/tab4/components/company/company.component.html
@@ -2,7 +2,7 @@
   <ion-card-header>
     <ion-card-title>
 
-      <ion-item>
+      <ion-item lines="none">
         <ion-grid>
           <ion-row>
             <ion-col size="3">
