--- a/alumni-mob/src/app/tab4/company-feedbacks/company-feedbacks.page.html
+++ b/alumni-mob/src/app/tab4/company-feedbacks/company-feedbacks.page.html
@@ -8,17 +8,15 @@
       <div class="title">
         <img class="logoSize" src="/assets/icon/aelion_logo.png">
         <h1> {{company?.name}} </h1>
+      </div>
     </div>
-    </div>
-     
-    
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">company-feedbacks</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-list class="list">
+    <ion-item class="item" *ngFor="let feedback of listFeedback">
+      <app-feedback *ngIf="feedback.id !== undefined" class="comp" [feedback]="feedback"></app-feedback>
+    </ion-item>
+  </ion-list>
 </ion-content>
