--- a/alumni-mob/src/app/tabs/components/logout.component.html
+++ b/alumni-mob/src/app/tabs/components/logout.component.html
@@ -1,4 +1,4 @@
-<ion-tab-button (click)="presentAlert()" name="déconnection">
+<ion-tab-button class="tabBarDeconnect" (click)="presentAlert()" name="déconnection">
   <ion-icon aria-hidden="true" name="power-outline"></ion-icon>
-  <ion-label>Déconnecter</ion-label>
+  <ion-label class="styleTabs" >Déconnecter</ion-label>
 </ion-tab-button>
