--- a/alumni-mob/src/app/tab1/components/post-content/post-content.component.html
+++ b/alumni-mob/src/app/tab1/components/post-content/post-content.component.html
@@ -1,8 +1,8 @@
 <ion-card-content class="postContainer">
   <ion-grid>
     <ion-row>
-      <ion-col size="11"
-        ><h1 class="blackColor">{{ postContent.title }}</h1>
+      <ion-col size="11">
+        <h1 class="postTitle">{{ postContent.title }}</h1>
       </ion-col>
       <ion-col>{{ postContent.category }}</ion-col>
     </ion-row>
@@ -17,8 +17,7 @@
       </ion-item>
     </ion-row>
     <ion-item class="marginTop" lines="none">
-      <ion-note
-        >Publié le {{ postContent.postedAt | date : "dd/MM/yyyy" }} à
+      <ion-note class="postDate">Publié le {{ postContent.postedAt | date : "dd/MM/yyyy" }} à
         {{ postContent.postedAt | date : "shortTime" }}
       </ion-note>
     </ion-item>
