--- a/alumni-mob/src/app/tabs/tabs.page.html
+++ b/alumni-mob/src/app/tabs/tabs.page.html
@@ -1,22 +1,22 @@
 <ion-tabs>
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
+  <ion-tab-bar class="tabBar" slot="bottom">
+    <ion-tab-button class="tabBar" tab="tab1" href="/tabs/tab1">
       <ion-icon aria-hidden="true" name="reader-outline"></ion-icon>
-      <ion-label>Actualités</ion-label>
+      <ion-label class="styleTabs">Acceuil</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
+    <ion-tab-button class="tabBar" tab="tab2" href="/tabs/tab2">
       <ion-icon aria-hidden="true" name="person-outline"></ion-icon>
-      <ion-label>Membres</ion-label>
+      <ion-label class="styleTabs">Membres</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
+    <ion-tab-button class="tabBar" tab="tab3" href="/tabs/tab3">
       <ion-icon aria-hidden="true" name="mail-outline"></ion-icon>
-      <ion-label>Messagerie</ion-label>
+      <ion-label class="styleTabs">Messagerie</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="tab4" href="/tabs/tab4">
+    <ion-tab-button class="tabBar" tab="tab4" href="/tabs/tab4">
       <ion-icon aria-hidden="true" name="business-outline"></ion-icon>
-      <ion-label>Expériences Pro</ion-label>
+      <ion-label class="styleTabs">Expériences Pro</ion-label>
     </ion-tab-button>
     <app-logout></app-logout>
   </ion-tab-bar>
