--- a/alumni-mob/src/app/tabs/tabs.page.scss
+++ b/alumni-mob/src/app/tabs/tabs.page.scss
@@ -1,1 +1,11 @@
-
+.tabBar{
+    background-color: #2d3041;
+    color: white;
+}
+.styleTabs{
+    color: #ffffff ;
+    font-family: 'Georgia' , serif;
+    font-size: 15px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
