there are some ohter change on the front of our application

--- a/alumni-mob/src/app/shared/components/intern-header/intern-header.component.html
+++ b/alumni-mob/src/app/shared/components/intern-header/intern-header.component.html
@@ -6,7 +6,7 @@
       <ion-row>
         <ion-col size="3">
           <ion-avatar>
-            <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+            <img class="img" alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
           </ion-avatar>
       </ion-col>
       <ion-col>
