--- a/alumni-mob/src/app/tab1/tab1.page.html
+++ b/alumni-mob/src/app/tab1/tab1.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar class="toolbarLayOut">
     <div class="toolBarChild">
       <img class="logoSize" src="/assets/logo-aelion-blanc.png">
-      <h1 class="styleHead"> ACCEUIL </h1>
+      <h1 class="styleHead"> Acceuil </h1>
     </div>
   </ion-toolbar>
 </ion-header>
