--- a/alumni-mob/src/app/tab2/tab2.page.scss
+++ b/alumni-mob/src/app/tab2/tab2.page.scss
@@ -4,6 +4,7 @@
 }
 .toolbarLayOut{
     display:flex;
+    background-color: #2d3041;
     
     //border:1px solid black;
 }
@@ -12,9 +13,16 @@
     height:100%;
     display: flex;
     justify-content: center;
-   
+    background-color: #2d3041;
 }
 .border{
     //border:1px solid black;
     justify-content: flex-end;
+}
+.styleHead{
+    color: #ffffff ;
+    font-family: 'Georgia' , serif;
+    font-size: 26px;
+    font-weight: 300;
+    letter-spacing: 2px;
 }
