--- a/alumni-mob/src/app/tab3/tab3.page.html
+++ b/alumni-mob/src/app/tab3/tab3.page.html
@@ -1,8 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar class="toolbarLayOut">
     <div class="toolBarChild">
-      <img class="logoSize" src="/assets/icon/aelion_logo.png">
-      <h1> Messagerie </h1>
+      <img class="logoSize" src="/assets/logo-aelion-blanc.png">
+      <h1 class="styleHead"> Messagerie </h1>
     </div>
   </ion-toolbar>
 </ion-header>
