--- a/alumni-mob/src/app/tab3/tab3.page.scss
+++ b/alumni-mob/src/app/tab3/tab3.page.scss
@@ -12,9 +12,18 @@
     height:100%;
     display: flex;
     justify-content: center;
+    background-color: #2d3041;
+
    
 }
 .border{
     //border:1px solid black;
     justify-content: flex-end;
+}
+.styleHead{
+    color: #ffffff ;
+    font-family: 'Georgia' , serif;
+    font-size: 26px;
+    font-weight: 300;
+    letter-spacing: 2px;
 }
