--- a/alumni-mob/src/app/tab4/company-feedbacks/company-feedbacks.page.scss
+++ b/alumni-mob/src/app/tab4/company-feedbacks/company-feedbacks.page.scss
@@ -14,6 +14,8 @@
     display: flex;
     justify-content:left;
     align-items:  center;
+    background-color: #2d3041;
+
 }
 .return {
     width: 100%;
@@ -29,6 +31,12 @@
     display: flex;
     align-items:  center;
     margin-right: 25%;
+    color: white;
+    font-family: 'Georgia' , serif;
+    font-size: 26px;
+    font-weight: 300;
+    letter-spacing: 2px;
+
 }
 .border{
     //border:1px solid black;
