--- a/alumni-mob/src/app/tab4/tab4.page.scss
+++ b/alumni-mob/src/app/tab4/tab4.page.scss
@@ -12,6 +12,8 @@
     height:100%;
     display: flex;
     justify-content: center;
+    background-color: #2d3041;
+
    
 }
 .border{
@@ -19,9 +21,19 @@
     justify-content: flex-end;
 }
 
-
+.styleHead{
+    color: #ffffff ;
+    font-family: 'Georgia' , serif;
+    font-size: 26px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
 
 .comp{
     display: block;
     width: 100%;
+}
+.img {
+    border: #474646;
+    border-style: double;
 }
