--- a/alumni-mob/src/app/tab4/components/feedback-form-step2/feedback-form-step2.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step2/feedback-form-step2.component.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button color="medium" (click)="cancel()">Précédent</ion-button>
+      <ion-button color="medium" (click)="previous()"><ion-icon name="arrow-back"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title>Nouvel Avis - étape 2</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="confirm()" [strong]="true">Suivant</ion-button>
+      <ion-button (click)="next()" [strong]="true">Suivant</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
