--- a/alumni-mob/src/app/login/login.page.html
+++ b/alumni-mob/src/app/login/login.page.html
@@ -1,13 +1,16 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
+  <ion-toolbar class="toolbarLayOut">
+    <div class="toolBarChild">
+      <img class="logoSize" src="/assets/logo-aelion-blanc.png">
+      <h1 class="styleHead"> Login </h1>
+    </div>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">login</ion-title>
+      <ion-title size="large">Login</ion-title>
     </ion-toolbar>
   </ion-header>
   <app-signin></app-signin>
