--- a/alumni-mob/src/theme/variables.scss
+++ b/alumni-mob/src/theme/variables.scss
@@ -1,2 +1,8 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+:root {
+    --ion-color-btn: #2d3041;
+}
+:root {
+    --ion-color-toggle: #2d3041;
+}
