again a repare on infinite scroll

--- a/alumni-mob/src/app/tab4/company-feedbacks/company-feedbacks.page.html
+++ b/alumni-mob/src/app/tab4/company-feedbacks/company-feedbacks.page.html
@@ -3,7 +3,9 @@
    
     <div class="toolBarChild">
       <div class="return">
-        <ion-icon name="arrow-back" (click)="back()"></ion-icon>
+        <ion-button class="btncolor" (click)="back()">
+          <ion-icon name="arrow-back"></ion-icon>
+        </ion-button>
       </div>
       <div class="title">
         <img class="logoSize" src="/assets/logo-aelion-blanc.png">
