--- a/alumni-mob/src/app/tab4/components/feedback-form-step1/feedback-form-step1.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step1/feedback-form-step1.component.html
@@ -29,6 +29,6 @@
   
   <ion-card *ngIf="inputModel && filteredComp.length === 0"> 
     <p>Cette entreprise n'est pas recensé dans nos bases de données</p>
-    <ion-button shape="round"> Créer l'entreprise ></ion-button>
+    <ion-button shape="round" (click)="next()"> Créer l'entreprise ></ion-button>
     </ion-card>
 </ion-content>
