--- a/alumni-mob/src/app/tab4/components/feedback-form-step2/feedback-form-step2.component.html
+++ b/alumni-mob/src/app/tab4/components/feedback-form-step2/feedback-form-step2.component.html
@@ -1,3 +1,4 @@
+<!-- feedback-form-step2.component.html -->
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
@@ -11,8 +12,34 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <p>
-    feedback-form-step2 works!
-  </p>
+  <form [formGroup]="form">
+    <ion-item>
+      <ion-label position="floating">Nom de l'entreprise</ion-label>
+      <ion-input formControlName="name"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Type d'entreprise</ion-label>
+      <ion-select formControlName="type">
+        <ion-select-option *ngFor="let type of companyTypes" [value]="type">{{ type }}</ion-select-option>
+      </ion-select>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Évaluation</ion-label>
+      <ion-select formControlName="medianRating">
+        <ion-select-option *ngFor="let rating of companyRatings" [value]="rating">{{ rating }}</ion-select-option>
+      </ion-select>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Logo</ion-label>
+      <ion-input formControlName="logo"></ion-input>
+    </ion-item>
+
+    <p>help</p>
+
+    <ion-button type="button" (click)="next()" [disabled]="!form.valid">Créer l'entreprise</ion-button>
+  </form>
 </ion-content>
 
