there is some other change on the feedback page for every company

--- a/alumni-mob/src/app/tab4/company-feedbacks/company-feedbacks.page.html
+++ b/alumni-mob/src/app/tab4/company-feedbacks/company-feedbacks.page.html
@@ -16,7 +16,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-list class="list">
+  <ion-list class="styleCentent">
     <ion-item class="item" *ngFor="let feedback of listFeedback ; let i = index">
       <app-feedback *ngIf="feedback.id !== undefined" class="comp" [feedback]="feedback" [index]="i"></app-feedback>
     </ion-item>
