--- a/alumni-mob/src/app/tab4/components/company/company.component.scss
+++ b/alumni-mob/src/app/tab4/components/company/company.component.scss
@@ -15,3 +15,10 @@
         width:600px;
     }
 }
+.styleCard{
+    color: #0d0d0d ;
+    font-family: 'Georgia' , serif;
+    font-size: 26px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
