--- a/alumni-mob/src/app/tab4/tab4.page.html
+++ b/alumni-mob/src/app/tab4/tab4.page.html
@@ -10,7 +10,7 @@
 <ion-content [fullscreen]="true">
 
   <ion-item>
-    <ion-input label="" placeholder="Entrer le nom d'entreprise" [value]="inputModel" (ionInput)="onInput($event)" #ionInputEl [clearInput]="true"></ion-input>
+    <ion-input class="inputStyle" label="" placeholder="Entrer le nom d'entreprise" [value]="inputModel" (ionInput)="onInput($event)" #ionInputEl [clearInput]="true"></ion-input>
   </ion-item>
 
     <ion-list class="list">
