--- a/alumni-mob/src/app/tab4/company-feedbacks/component/feedback/feedback.component.scss
+++ b/alumni-mob/src/app/tab4/company-feedbacks/component/feedback/feedback.component.scss
@@ -1,3 +1,37 @@
+HEAD
 .footer {
     margin-top: 10px;
+}
+.styleFeed{
+    color: #0d0d0d ;
+    font-family: 'Georgia' , serif;
+    font-size: 26px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+.styleRow{
+    color: #0d0d0d ;
+    font-family: 'Georgia' , serif;
+    font-size: 26px;
+    letter-spacing: 2px;
+}
+.styleRating{
+    color: #0d0d0d ;
+    font-family: 'Georgia' , serif;
+    font-size: 24px;
+    font-weight: 300;
+    letter-spacing: 2px;
+    margin-left: 200px;
+}
+.styleJob{
+    color: #0d0d0d ;
+    font-family: 'Georgia' , serif;
+    font-size: 20px;
+    letter-spacing: 2px;
+}
+.styleNote{
+    margin-top: 0%;
+    color: #313131;
+    font-family: 'Georgia' , serif;
+    font-size: 15px;
 }
