--- a/alumni-mob/src/app/tab4/tab4.page.scss
+++ b/alumni-mob/src/app/tab4/tab4.page.scss
@@ -13,8 +13,6 @@
     display: flex;
     justify-content: center;
     background-color: #2d3041;
-
-   
 }
 .border{
     //border:1px solid black;
@@ -28,12 +26,14 @@
     font-weight: 300;
     letter-spacing: 2px;
 }
+.inputStyle{
+    width: 100%;
+    height:100%;
+    font-family: 'Georgia' , serif;
+    color: #2d3041;
+}
 
 .comp{
     display: block;
     width: 100%;
-}
-.img {
-    border: #474646;
-    border-style: double;
 }
