--- a/alumni-mob/src/theme/variables.scss
+++ b/alumni-mob/src/theme/variables.scss
@@ -2,6 +2,7 @@
 // http://ionicframework.com/docs/theming/
 :root {
     --ion-color-btn: #2d3041;
+    --ion-corder-card: #2d3041; 
 }
 :root {
     --ion-color-toggle: #2d3041;
